[project]
name = "asm-cli"
version = "0.1.1"
description = "ASM CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests==2.31.0",
  "python-dotenv==1.0.1",
  "colorama==0.4.6",
  "tabulate==0.9.0",
  "publicsuffix2==2.20191221",
  "dnspython==2.6.1",
  "python-Wappalyzer",
  "setuptools>=65.0.0",
]

[project.scripts]
asm = "asm:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["asm"]

[tool.setuptools.packages.find]
include = ["modules*", "utils*"]
exclude = ["reports*", "reports/*"]


